<resources>
    <string name="app_name">Cookr</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="recipes">RECIPES</string>
    <string name="pancakes_instructions">PANCAKES INSTRUCTIONS</string>
    <string name="steps">STEPS</string>
    <string name="next">NEXT</string>
    <string name="prev">PREV</string>
    <string name="green">GREEN</string>
    <string name="red">RED</string>
    <string name="blue">BLUE</string>
    <string name="orange">ORANGE</string>
    <string name="addRecipe">ADD RECIPE</string>
    <string name="timer">TIMER</string>
    <string name="start_timer">START</string>
    <string name="timerNumber">00:00:00</string>
    <string name="cookr_logo">cookr-logo</string>
    <string name="step_1">STEP 1: MIX 2 ½ FLOUR WITH ½ TBSP SALT IN A BOWL.</string>
    <string name="step_2">STEP 2: WHIP THE FLOUR MIX TOGETHER WITH HALF OF THE MILK (6 DL). THEN WHIP TOGETHER THE MIX WITH THE REST OF THE MILK AND THE 3 EGGS.</string>
    <string name="step_3">STEP 3: MELT PART OF THE BUTTER IN THE PAN AND POUR OUT A THIN LAYER OF MIX TO COVER THE WHOLE PAN. FRY FOR 30 SECONDS ON EACH SIDE UNTIL FINISHING ALL OF THE MIX. (10 MIN) </string>
    <string name="step_4">STEP 4: SERVE WITH YAM, BERRIES OR FRUIT.</string>
    <string name="cookr_menu">COOKR MENU</string>
    <string name="slide_arrow_signifier">Slide Arrow Signifier</string>
    <string name="by_holding_your_hand_over_the_phone_you_can_swithc_between_timer_and_recipe">BY HOLDING YOUR HAND OVER THE PHONE YOU CAN SWITCH BETWEEN TIMER AND RECIPE</string>
    <string name="timer_mode_swipe_hand_over_phone_in_order_to_start_or_pause_the_timer">TIMER MODE: SWIPE HAND OVER PHONE IN ORDER TO START OR PAUSE THE TIMER</string>
    <string name="recipe_mode_swipe_hand_over_phone_in_order_to_swipe_instructions_or_flick_the_phone_instead">RECIPE MODE: SWIPE HAND OVER PHONE IN ORDER TO SWIPE INSTRUCTIONS, OR FLICK THE PHONE INSTEAD</string>
    <color name="white">#FFFFFF</color>
    <color name="khaki">#9A8977</color>
    <color name="darkbrown">#474338</color>
    <color name="khakitransp">#B19D88</color>
</resources>
